--- a/index.html
+++ b/index.html
@@ -7,31 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    Hello git sadf asdf sa
-    <fieldset>
-      sdf
-      <aside>
-        <fieldset>
-          sdfa
-          <dfn
-            ><a
-              href="fda
-                sf
-                asd
-                f
-                asf
-                sa
-                f
-                s
-                f
-                asf
-                as
-                fd adsfsda f
-                "
-            ></a
-          ></dfn>
-        </fieldset>
-      </aside>
-    </fieldset>
+    FN12 bilan github darsi bo'lib o'tmoqda, juda ham qizg'in emal lekin.
   </body>
 </html>
